--- a/中国大陆手机号.md
+++ b/中国大陆手机号.md
@@ -5,14 +5,14 @@
 2. 移动：139, 138, 137, 136, 135, 134, 147, 150, 151, 152, 157, 158, 159, 178, 182, 183, 184, 187, 188
 3. 联通：130, 131, 132, 155, 156, 185, 186, 145, 176
 4. 电信：133, 153, 177, 180, 181, 189
-5. 虚拟运营商：170
+5. 虚拟运营商：170~179
 
 JavaScript
 ==
 
 ```javascript
 function validate(mobile) {
-  var REG = /^(13[0-9]|15[012356789]|17[0678]|18[0-9]|14[57])[0-9]{8}$/;
+  var REG = /^(13[0-9]|15[012356789]|17[0-9]|18[0-9]|14[57])[0-9]{8}$/;
   return REG.test(mobile);
 }
 ```
