--- a/中华人民共和国居民身份证.md
+++ b/中华人民共和国居民身份证.md
@@ -28,8 +28,7 @@ function validate(id) {
   }
 
   var ids = id.split('');
-  var a = [7, 9, 10, 5, 8, 4, 2, 1, 6, 3,
-           7, 9, 10, 5, 8, 4, 2];
+  var a = [7, 9, 10, 5, 8, 4, 2, 1, 6, 3, 7, 9, 10, 5, 8, 4, 2];
   var b = ['1', '0', 'x', '9', '8', '7', '6', '5', '4', '3', '2'];
 
   var sum_mod = a.reduce((prev, current, i) => prev + current * parseInt(ids[i], 10), 0) % 11;
